<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/fragment_connection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    tools:context="com.reiss.yanneck.quadcopterremote.com.drnsmltr.quadrocopterremote.fragments.ConnectionFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeSentence" />


    <EditText
        android:id="@+id/hostField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:hint="@string/hint_host"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:imeOptions="actionNext"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectButtonLabel"
        android:onClick="connect"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/searchButton"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/portField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/hit_port"
        android:ems="10"
        android:imeActionId="@+id/portDone"
        android:imeOptions="actionDone"
        android:imeActionLabel="@string/doneKeyboardButtonLabel"

        android:layout_marginBottom="13dp"
        android:layout_above="@+id/connectButton"
        android:layout_alignLeft="@+id/hostField"
        android:layout_alignStart="@+id/hostField"/>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        android:onClick="openBroadcastFragment"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
